fix spacing

--- a/style-big.css
+++ b/style-big.css
@@ -43,11 +43,11 @@
 }
 
 .card {
-	transform: translateY(4vh);
+	transform: translateY(5vh);
     margin-left: 15vw;
     margin-right: 15vw;
     width: 70vw;
-	padding-bottom: 14px;
+	padding-bottom: 4.5vh;
     background-color: rgb(60, 60, 60);
     border: 5px solid rgb(60, 60, 60);
     border-radius: 3vh;
@@ -106,7 +106,7 @@
 .small-card h4 {
 	font-size: 2vw;
 	margin: 0;
-	transform: translateX(25px) translateY(12px);
+	transform: translateX(25px) translateY(15px);
 }
 
 .small-card p {
